@@ -11,17 +11,33 @@ if {[ns_httptime 0] eq "Thu, 01 Jan 1970 00:00:00 GMT"} {
     testConstraint correctLocale true
 }
 
+
+
 test ns_httptime-1.1 {basic syntax: plain call} -body {
      ns_httptime
-} -constraints correctLocale -returnCodes error -result {wrong # args: should be "ns_httptime time"}
+} -returnCodes error -result {wrong # args: should be "ns_httptime time"}
 
 test ns_httptime-1.2 {basic syntax: wrong arg type} -body {
      ns_httptime a
-} -constraints correctLocale -returnCodes error -result {expected integer but got "a"}
+} -returnCodes error -result {expected integer but got "a"}
 
 test ns_httptime-1.3 {basic syntax: wrong number of args} -body {
      ns_httptime 1 2
-} -constraints correctLocale -returnCodes error -result {wrong # args: should be "ns_httptime time"}
+} -returnCodes error -result {wrong # args: should be "ns_httptime time"}
+
+test ns_httptime-1.4 {basic syntax: plain call} -body {
+     ns_parsehttptime
+} -returnCodes error -result {wrong # args: should be "ns_parsehttptime httptime"}
+
+test ns_httptime-1.5 {basic syntax: wrong number of args} -body {
+     ns_parsehttptime 1 2
+} -returnCodes error -result {wrong # args: should be "ns_parsehttptime httptime"}
+
+test ns_httptime-1.6 {basic syntax: incorrect format} -body {
+     ns_parsehttptime a
+} -returnCodes error -result {invalid time: a}
+
+
 
 test ns_httptime-2.1 {basic operation} -body {
      ns_httptime 0
@@ -38,5 +54,30 @@ test ns_httptime-2.3 {basic operation} -body {
 test ns_httptime-2.4 {basic operation} -body {
      ns_httptime 1129794520
 } -constraints correctLocale -result {Thu, 20 Oct 2005 07:48:40 GMT}
+
+
+
+#
+# Note: Ns_ParseHttpTime() uses 0 to indicate errors which
+# makes it impossible to parse the first moment of the Unix epoch.
+#
+
+test ns_httptime-3.1 {short day} -body {
+    ns_parsehttptime "Thu, 01 Jan 1970 00:00:01 GMT"
+} -result 1
+
+test ns_httptime-3.2 {long day} -body {
+    ns_parsehttptime "Thursday, 01 Jan 1970 00:00:01 GMT"
+} -result 1
+
+test ns_httptime-3.3 {dashes, short year} -body {
+    ns_parsehttptime "Thu, 01-Jan-70 00:00:01 GMT"
+} -result 1
+
+test ns_httptime-3.4 {no comma} -body {
+    ns_parsehttptime "Thu Jan  1 00:00:01 1970 GMT"
+} -result 1
+
+
 
 cleanupTests
